# notion_recipe_app

./: README.md  app.py  custom_scrapers.py  download_recipe.py  notion_upload.py  pantry_agent.py  pyproject.toml  recipe_urls.txt
archive/: custom_scrapers.py  dump.py  pantry_master.csv  to_do.txt  upload_csv.py
archive/web_data/: Boysenberry__White_Chocolate_No_Bake_Cheesecake.json  Easy_Banana_Bread.json  Super_Moist_Chocolate_Cupcakes.json  downloaded_recipe.txt  kiwi_recipe_dump.txt  pantry_master.csv  supported_sites.txt  www.chelsea.co.nz.txt
custom_experiments/: Untitled.json  download_custom.py
custom_scrapers/: __init__.py  chelsea_sugar.py  kiwi_country_girl.py  sweetest_menu.py
helpers/: dump.py
web_data/: www.sweetestmenu.com.txt  www.woolworths.co.nz.txt
